tests/fuzzy/f8d98c8fcb9b0c66058a3dc04221582ef21f30c2.scala
trait i0 extends Any
abstract class i1 {
type i2 <: i3
def i3(i4: i1): i3
}
trait i4 extends i0 { i5: i1 @ _, i8: Int => } type i9 = i0.this.i6 } // error
}
object i11 extends i1 {
trait i1 <: Ordered[i1] with i4#i10.i7
val i9 = new i1 { type i2 <: i4 } }
val i12: i3 & i6 & i5 = ???
def i10(i10: i1) = i15 match {
case i12 =>
i7
}
}
}